# Nap

./: dalge.cabal  flake.nix  nap.cabal
app/: Base.hs  Main.hs  Parser.hs  Static.hs  ToC.hs  Util.hs
app/Parser/: ExprStmt.hs  Function.hs  Literal.hs  Pattern.hs  Type.hs  Util.hs
app/Static/: Duplicates.hs  Error.hs  Found.hs  Test.hs  Typing.hs
app/ToC/: CDSL.hs  DependencyMaker.hs  ExprStmt.hs  Expression.hs  Function.hs  Refs.hs  Statement.hs  Test.hs  TypeDef.hs  Util.hs
base/: List.dg  List.np  Opt.dg  Prelude.np  Test.np
