cabal-version:      3.0
name:               dalge
version:            0.1.0.0
license:            AGPL-3.0-or-later
author:             m3dry
maintainer:         m3dry@tutamail.com
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

executable dalge
    import:           warnings
    main-is:          Main.hs
    other-modules:
        , Parser
        , Parser.Util
        , Parser.Function
        , Parser.ExprStmt
        , Parser.Literal
        , Parser.Type
        , Parser.Pattern
        , Base
        , Util
        , Static
        , Static.Error
        , Static.Duplicates
        , Static.Found
        , ToC
    build-depends:
        , base
        , text
        , parsec
        , pretty-simple
        , file-embed
        , bytestring
        , template-haskell
    hs-source-dirs:   app
    default-language: GHC2021
