cabal-version:      3.0
name:               nap
version:            0.1.0.0
license:            AGPL-3.0-or-later
author:             m3dry
maintainer:         m3dry@tutamail.com
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

executable nap
    import:           warnings
    main-is:          Main.hs
    other-modules:
        , Parser
        , Parser.Util
        , Parser.Function
        , Parser.ExprStmt
        , Parser.Literal
        , Parser.Type
        , Parser.Pattern
        , Base
        , Util
        , Static
        , Static.Error
        , Static.Typing
        , Static.Test
        , ToC
    build-depends:
        , base
        , text
        , parsec
        , pretty-simple
        , file-embed
        , bytestring
        , template-haskell
        , containers
    hs-source-dirs:   app
    default-language: GHC2021
